# APIFootball

./: .gitignore  README.md  config.py  main.py  pyproject.toml
api/: league.py  player.py  squad.py  team.py
core/: jwt.py
dal/: userDAL.py
db/: database.py
handlers/: league_router.py  player_router.py  squad_router.py  team_router.py  user_router.py
migration/: env.py
migration/versions/: 78c031b05898_add_table_users.py
models/: user.py
schema/: user.py
services/: redis_service.py
static/: index.html  leagues.html  login.html  profile.html  squad.html  teams.html
static/css/: leagues.css  login.css  profile.css  squad.css  style.css  teams.css
static/js/: auth.js  index.js  leagues.js  login.js  profile.js  squad.js  teams.js
